compiler/tests/fail/private_import/main.afns
package app;

import lib.api;

fn main() -> i32 {
    return hidden();
}
